# Imgui-glsurfaceview-any-game

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Imgui/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/java/com/zerene/: Main.java  MainActivity.java  Render.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
